<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Jenkins Monitor</string>

    <!-- Preferences -->
    <string name="server_information">Server information</string>
    <string name="server_address">Server address</string>
    <string name="set_your_hostname">Set the hostname</string>
    <string name="server_port">Server port</string>
    <string name="set_your_server_port">Set the server port</string>

    <string name="user_details">User details</string>
    <string name="authentication_token">Authentication token</string>
    <string name="set_your_authentication_token">Set your authentication token</string>
    <string name="username">Username</string>
    <string name="set_your_username">Set your username</string>

    <!-- Error dialogs for the preferences-->
    <string name="error_dialog_title">Error</string>
    <string name="invalid_hostname">The provided hostname is invalid!\nPlease make sure that it looks like
        http://jenkins.org or https://jenkins.org
    </string>
    <string name="invalid_port">The provided port is invalid!\nPlease ensure that the port is between 1 and 65535
    </string>
    <string name="invalid_username">The provided username is invalid!</string>
    <string name="invalid_token">The provided token is invalid!</string>
    <string name="ok">OK</string>
    <string name="no_valid_settings">No valid credentials are provided, please check your settings!</string>

    <!-- Error dialogs for client exceptions-->
    <string name="jenkins_client_error">Sorry, an error occurred.\nPlease make sure that your provided credentials are
        correct!
    </string>
    <string name="network_error">Please make sure, that your device is connected to the Internet!</string>

    <!-- Menu headers -->
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="trigger_build">Trigger new build</string>

    <!-- Time abbreviations -->
    <string name="seconds_abbreviation">sec</string>
    <string name="minutes_abbreviation">min</string>
    <string name="hours_abbreviation">h</string>

    <!-- List headers -->
    <string name="job_name">Job name</string>
    <string name="status">Status</string>
    <string name="build_number">Nr.</string>
    <string name="duration">Duration</string>
    <string name="result">Result</string>
    <string name="result_image_description">Build result</string>
    <string name="status_image_description">Job status</string>
    <string name="authentication_needed">Authentication needed</string>
    <string name="set_authentication_needed">Define whether authentication details are needed</string>

    <!-- Date format -->
    <string name="date_format">EEEE, dd/MM/yyyy, H:mm a</string>

    <!-- Exception dialog -->
    <string name="exception_dialog_title">Application crashed</string>
    <string name="exception_dialog_message">The application crashed.\nDo you want to send a message with the
        cause of the exception to the developer?</string>
    <string name="exception_mail_subject">Unexpected exception - Please fix this</string>
    <string name="send_email">Send</string>
    <string name="cancel">Cancel</string>
</resources>
